--- a/languages/ml/elm/videos.org
+++ b/languages/ml/elm/videos.org
@@ -1,4 +1,5 @@
 - Channels
+  https://www.youtube.com/@rhg_dev
   https://www.youtube.com/@ElmEurope
   https://www.youtube.com/@elmonlinemeetup
   https://www.youtube.com/@elmtownpodcast
@@ -10,6 +11,101 @@
 - 22 | Elm - Buidling a Simple Calculator https://www.youtube.com/watch?v=_dt5_37lO5w
 - 23 | Elm - Functional Language for the Frontend https://www.youtube.com/watch?v=SAAJlqu2sos
 - 23 | Is Elm dead? https://www.youtube.com/watch?v=PNgAmr4gPYQ
+* 16 | Making Impossible States Impossible     | Richard Feldman
+https://www.youtube.com/watch?v=IcgmSRJHu_8
+
+- testing is good, but impossible is better
+- if you make impossible state, impossible, you will don't need to test for it
+
+- do you want 2 lists, or 1 list with 2 elements?
+- do you want 2 maybes or a union type?
+
+** example: in elm-css, to represent a css stylesheet using @charset, @import @namespace
+  - from
+    #+begin_src elm
+      type alias Stylesheet =
+          { declarations : List Declaration }
+    #+end_src
+  - to
+    #+begin_src elm
+      type alias Stylesheet =
+          { charset : Maybe String
+          , imports : List Import
+          , namespaces : List Namespace
+          , declarations : List Declaration
+          }
+    #+end_src
+
+** example: a Model of a list of set of questions and answers
+
+- from
+  #+begin_src elm
+    type alias Model =
+        { prompts : List String           -- ["What was the best part of ElmConf?"]
+        , responses : List (Maybe String) -- [Some "it was ok"] or element is Nothing if didn't anser the question already
+        }
+  #+end_src
+
+- to, fixes having a response with no [] question at all
+  #+begin_src elm
+    type alias Question =
+        { prompt : String
+        , response : Maybe String
+        }
+
+    type alias Model =
+        { questions : List Question }
+  #+end_src
+
+** example: a Model of a history of questions
+
+- from
+  #+begin_src elm
+    type alias History =
+        { questions : List Question
+        , current : Question
+        }
+  #+end_src
+
+- to, avoid having a /current/ with an empty list of /questions/
+  #+begin_src elm
+    type alias History =
+        { first : Question -- ought to have one
+        , others : List Question
+        , current : Question
+        }
+  #+end_src
+
+** example: a Model of a history of questions
+- to, avoids the /current/ not belonging to other questions
+  #+begin_src elm
+    type alias History = -- a "zip list"
+        { previous  : List Question
+        , current   : Question
+        , remaining : List Question
+        }
+  #+end_src
+
+** example: a Model of a showed status (2x Maybe -> type)
+
+- from
+  #+begin_src elm
+    type alias Model =
+        { status : Maybe String
+        , questionToRestore : Maybe String
+        }
+  #+end_src
+
+- to, avoids having Nothing on status but Just questionToRestore
+  #+begin_src elm
+    type Status
+        = NoStatus
+        | TextStatus String
+        | DeleteStatus String Question
+
+    type alias Model = { status : Status }
+  #+end_src
+
 * 17 | The Life of a File                      | Evan Czaplicki
 
 - code https://github.com/dwyl/learn-elm/blob/dd99bc7925328726b61d76c0e773066faa7276b8/examples/checkboxes.elm#L19
