--- a/languages/ml/haskell/tools/cabal.org
+++ b/languages/ml/haskell/tools/cabal.org
@@ -47,34 +47,51 @@ manual https://cabal.readthedocs.io/en/3.4/index.html
   - carrot operators: limits to packages that should be compatible per PVP guidelines
     eg: base ^> 4.13.0.0
 
-|--------------------+--------------------+-----------------------------------------|
-| top-level/stanza   | property           | value OR description                    |
-|--------------------+--------------------+-----------------------------------------|
-| name               |                    | REQUIRED                                |
-| version            |                    | REQUIRED                                |
-| cabal-version      |                    |                                         |
-| extra-source-files |                    | Changelog.md                            |
-| data-files         |                    | **/*.txt                                |
-|--------------------+--------------------+-----------------------------------------|
-|                    | hs-source-dirs     |                                         |
-|                    | build-depends      | base                                    |
-|                    | default-language   | Haskell2010                             |
-|                    | default-extensions | entire project *language extensions*    |
-|--------------------+--------------------+-----------------------------------------|
-| library            | -                  | name defaults to the package name       |
-|                    | exposed-modules    | public to all consumers                 |
-|                    | other-modules      | private to the library                  |
-|                    | other-extensions   | on target *language extensions*         |
-|                    | hs-source-dirs     | src                                     |
-|--------------------+--------------------+-----------------------------------------|
-| executable         |                    |                                         |
-|                    | main-is            | name of Main.hs                         |
-|                    | build-depends      | base + library name                     |
-|                    | hs-source-dirs     | app                                     |
-|                    | ghc-options        | -O1 -threaded -rtsopts -with-rtsopts=-N |
-|--------------------+--------------------+-----------------------------------------|
-| test-suite         |                    |                                         |
-|                    | hs-source-dirs     | test                                    |
-|                    | main-is            | MyLibTest.hs                            |
-|                    | type               | exitcode-stdio-1.0                      |
-|--------------------+--------------------+-----------------------------------------|
+|------------------------+--------------------+-----------------------------------------|
+| top-level/stanza       | property           | value OR description                    |
+|------------------------+--------------------+-----------------------------------------|
+| cabal-version          |                    |                                         |
+| name                   |                    | REQUIRED                                |
+| version                |                    | REQUIRED                                |
+| category               |                    |                                         |
+| copyright              |                    | 2022 Mission Valley Software LLC        |
+| license                |                    | Apache-2.0                              |
+| license-file           |                    | license.txt                             |
+| author                 |                    |                                         |
+| maintainer             |                    |                                         |
+| description            |                    |                                         |
+| synopsis               |                    | one line? description                   |
+| extra-source-files     |                    | Changelog.md                            |
+| data-files             |                    | **/*.txt                                |
+| homepage               |                    | https://github.com/azimut/foobar        |
+| bug-reports            |                    | https://github.com/azimut/foobar/issues |
+|------------------------+--------------------+-----------------------------------------|
+| common base            |                    |                                         |
+|                        | default-language   | Haskell2010                             |
+|                        | default-extensions | entire project *language extensions*    |
+|                        | ghc-options        |                                         |
+|                        | build-depends      | base                                    |
+|                        | hs-source-dirs     |                                         |
+|                        | reexported-modules |                                         |
+|------------------------+--------------------+-----------------------------------------|
+| library                | -                  | name defaults to the package name       |
+|                        | exposed-modules    | public to all consumers                 |
+|                        | other-modules      | private to the library                  |
+|                        | other-extensions   | on target *language extensions*         |
+|                        | hs-source-dirs     | src                                     |
+|------------------------+--------------------+-----------------------------------------|
+| executable             |                    |                                         |
+|                        | main-is            | name of Main.hs                         |
+|                        | build-depends      | base + library name                     |
+|                        | hs-source-dirs     | app                                     |
+|                        | ghc-options        | -O1 -threaded -rtsopts -with-rtsopts=-N |
+|------------------------+--------------------+-----------------------------------------|
+| test-suite             |                    |                                         |
+|                        | hs-source-dirs     | test                                    |
+|                        | main-is            | MyLibTest.hs                            |
+|                        | type               | exitcode-stdio-1.0                      |
+|------------------------+--------------------+-----------------------------------------|
+| source-repository head |                    |                                         |
+|                        | type               | git                                     |
+|                        | location           | git://...git url                        |
+|------------------------+--------------------+-----------------------------------------|
